    patch.

  - Fix RT80704. 51scroll.t test checks scrollable cursors but assumes
    all Oracles support them (only 9 and above). Thanks to Steffen
    Goeldner for RT and patch.

  - Fix RT81067. 58object.t has some subtype tests and subtypes were
    introduced in Oracle 9. Skip if < Oracle 9. Thanks to Steffen
    Goeldner for RT and patch.

  [MISCELLANEOUS]

  - The original 26exe_array test was replaced some time ago with a
    copy of the one from DBD::ODBC. Since then I've fixed issues in
    the DBD::ODBC one and added more tests (like tests for some RTs
    above). To make keeping them in synch easier I've modularised the
    tests. Hence new ExecuteArray.pm. (Martin J. Evans)

  - simple code clean up, replacing 3 uses of safemalloc with Newz
    (John Scoles)

  - New FAQ entry on Solaris and setting linker library path.

1.52      2012-10-19

 - promote 1.51_00 to official release

1.51_00   2012-09-28

  [BUG FIXES]

  - fix serious memory corruption in TAF support (Martin J. Evans)

  - fix finding client in situation where client and server both
    installed but different architectures (patch by H.Merijn Brand)

  - fix memory leak in TAF handling - the TAF function was leaked
    (Martin J. Evans)

  - fix issue with taf_function being set to a scalar which goes
    out of scope before the callback is made (Martin J. Evans)

  - fix RT46739 if a connection breaks the environment handle is
    not thrown away (Martin J. Evans)

  - ora_driver_name was not defaulted to the correct DBD::Oracle
    version (Martin J. Evans)

  - ora_driver_name, ora_client_info, ora_client_identifier,
    ora_action and ora_oci_success_warn were set twice (if specified)
    on connect as they were not deleted from the connect attributes
    once handled. Code now leaves the setting to the later STORE DBI
    calls (Martin J. Evans)

  - fixed some compiler warnings for %lf (Martin J. Evans)

  - fixed RT78700 - column_info reports wrong size for char semantic